--- a/project/photothermal-therapy/index.html
+++ b/project/photothermal-therapy/index.html
@@ -721,7 +721,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>We are developing improved methods for photothermal treatment of cancer tumours, focusing on modifications of functionalised nanoparticles that can improve absorption while also being bio-compatible. We are also investigating improved methods of beam delivery.<br>
+      <p>We are developing improved methods for photothermal treatment of cancer tumours, focusing on modifications of functionalised nanoparticles that can improve absorption while also being bio-compatible. We are also investigating improved methods of beam delivery and techniques to calculate tissue damage.<br>
 
 
 
